--- a/src/composer.json
+++ b/src/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "Ketan/Test",
+    "name": "ketanvault/mypackage",
     "description": "test",
     "type": "library",
     "authors": [
@@ -12,7 +12,7 @@
     "extra": {
         "laravel": {
             "providers": [
-                "Ketan\\Test\\TestServiceProvider"
+                "TestServiceProvider"
             ]
         }
     }
