--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,10 @@
             "email": "ketanmk@teamvault.net"
         }
     ],
+    "psr-4": {
+        "App\\": "app/",
+        "ketan\\test\\": "vendor\\ketan\\test\\src"
+    },
     "require": {},
     "extra": {
         "laravel": {
@@ -15,5 +19,6 @@
                 "ketan\\test\\TestServiceProvider"
             ]
         }
-    }
+    },
+    "minimum-stability": "dev",
 }
