--- a/composer.json
+++ b/composer.json
@@ -10,13 +10,12 @@
     ],
     "psr-4": {
         "App\\": "app/",
-        "ketan\\test\\": "src/"
     },
     "require": {},
     "extra": {
         "laravel": {
             "providers": [
-                "ketan\\test\\TestServiceProvider"
+                "vendor\\ketan\\test\\TestServiceProvider"
             ]
         }
     },
