--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     "extra": {
         "laravel": {
             "providers": [
-                "vendor\\src\\ketan\\test\\TestServiceProvider"
+                "vendor\\ketan\\test\\src\\TestServiceProvider"
             ]
         }
     },
