--- a/composer.json
+++ b/composer.json
@@ -8,9 +8,11 @@
             "email": "ketanmk@teamvault.net"
         }
     ],
-    "psr-4": {
-        "App\\": "app/",
-        "ketan\\test\\": "src/"
+    "autoload": {
+        "psr-4": {
+            "App\\": "app/",
+            "ketan\\test\\": "src/"
+        }
     },
     "minimum-stability": "dev"
 }
